assets/style/about-me.css
#about-me {
    text-align: center;
    background-color: black;
    background: url("/assets/images/bg-dot.svg") black;
}
#about-me-sub {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 0, 0, .69);
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 69px 69px rgba(14, 6, 24, 0.5);
}
#profile-pic-abt {
    color: transparent;
    width: 10rem;
    height: 10rem;
    border-radius: 50%;
    border: rgba(13, 0, 126, 0.3) 2px solid;
    margin-bottom: 2vh;
    box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
}
h1 {
    color: rgb(73, 73, 2);
    font-size: 2rem;
    margin-top: 5vh;
    margin-bottom: 2vh;
}
#abt-me-socials {
    display: inline-grid;
    grid-template-columns: auto auto auto auto auto auto;
    background-color: rgba(10, 10, 0, 0.1);
    border-radius: 50px;
    padding: 2vh;
    height: fit-content;
    width: 45vh;
    margin-bottom: 2vh;
}
#abt-me-socials > a {
    display: inline;
    background-color: black;
    height: 6vh;
    width: 6vh;
    overflow: hidden;
    border-radius: 50%;
}
.abt-me-social-logo {
    background-color: black;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    color: white;
}
.abt-btn {
    padding: 10px;
    border-radius: 10px;
    font-size: 1rem;
    background-color: rgba(15, 23, 143, 0.1);
    border: rgba(0, 7, 65, 0.5) 1px solid;
    color: aliceblue;
    margin: 10px;
}
.abt-btn:hover {
    background-color: rgba(36, 143, 15, 0.1);
    border: rgba(0, 65, 3, 0.5) 1px solid;
    cursor: pointer;
}

